Actualizados ciertos links

--- a/Introduccion_a_Numpy-PyConES-2022.ipynb
+++ b/Introduccion_a_Numpy-PyConES-2022.ipynb
@@ -4921,9 +4921,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* http://numpy.scipy.org\n",
-    "* http://scipy.org/Tentative_NumPy_Tutorial\n",
-    "* http://scipy.org/NumPy_for_Matlab_Users - A Numpy guide for MATLAB users."
+    "* http://numpy.org  - Official web of NumPy project.\n",
+    "* https://realpython.com/numpy-tutorial/  - A Numpy tutorial.\n",
+    "* https://docs.scipy.org/doc/numpy-1.15.0/user/numpy-for-matlab-users - A Numpy guide for MATLAB users."
    ]
   },
   {
